--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,9 @@ spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
 #cookie Ù–‘
-COOKIE_USERNAME=COOKIE_USERNAME
+COOKIE_NICKNAME=COOKIE_NICKNAME
 COOKIE_IDENTITY=COOKIE_IDENTITY
+COOKIE_ID=COOKIE_ID
 
 #url¬∑æ∂ Ù–‘
 LOGIN_PAGE_URL=#
