--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,15 @@ spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
 
+#配置静态资源文件路径
+spring.mvc.static-path-pattern=/**
+
 #cookie属性
 COOKIE_NICKNAME=COOKIE_NICKNAME
 COOKIE_IDENTITY=COOKIE_IDENTITY
 COOKIE_ID=COOKIE_ID
 
 #url路径属性
-LOGIN_PAGE_URL=#
+LOGIN_PAGE_URL=http://localhost:8080/
 
 management.context-path=monitor
